unpackaged/main/default/objects/WorkOrder/fields/Agence_en_mobilite__c.field-meta.xml
<CustomField>
    <fullName>Agence_en_mobilite__c</fullName>
    <formula>if
(
 Agence_Intervenante__r.Agence_en_mobilite__c == true
,
true
,
false
)</formula>
    <label>Agence en mobilité</label>
    <type>Checkbox</type>
</CustomField>