unpackaged/main/default/objects/WorkOrder/fields/Agence_parc__c.field-meta.xml
<CustomField>
    <fullName>Agence_parc__c</fullName>
    <formula>Asset.Agence__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agence propriétaire</label>
    <type>Text</type>
</CustomField>