unpackaged/main/default/objects/WorkOrder/fields/Alerte__c.field-meta.xml
<CustomField>
    <fullName>Alerte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alerte</label>
    <referenceTo>Alerte__c</referenceTo>
    <relationshipLabel>Ordres de Travail (Alertes)</relationshipLabel>
    <relationshipName>Ordres_de_Travail_alertes</relationshipName>
    <type>Lookup</type>
</CustomField>