unpackaged/main/default/objects/WorkOrder/fields/Anomalie__c.field-meta.xml
<CustomField>
    <fullName>Anomalie__c</fullName>
    <description>anomalie</description>
    <label>Anomalie</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>type_OE__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accastillage</fullName>
            </value>
            <value>
                <fullName>Accessoires (enregistreur, contacteur de porte, sonde piqueuse, etc)</fullName>
            </value>
            <value>
                <fullName>AEBS</fullName>
            </value>
            <value>
                <fullName>Alarme personne enfermée</fullName>
            </value>
            <value>
                <fullName>Alimentation</fullName>
            </value>
            <value>
                <fullName>Alimentation Carburant</fullName>
            </value>
            <value>
                <fullName>Alimentation électrique</fullName>
            </value>
            <value>
                <fullName>Alternateur</fullName>
            </value>
            <value>
                <fullName>Amortisseur</fullName>
            </value>
            <value>
                <fullName>Auvent</fullName>
            </value>
            <value>
                <fullName>Axes grippés</fullName>
            </value>
            <value>
                <fullName>Batterie Déchargée</fullName>
            </value>
            <value>
                <fullName>Batterie De Puissance Groupe Électrique</fullName>
            </value>
            <value>
                <fullName>Batterie De Traction Véhicule Électrique</fullName>
            </value>
            <value>
                <fullName>Batterie Frigo</fullName>
            </value>
            <value>
                <fullName>Batterie Hayon</fullName>
            </value>
            <value>
                <fullName>Bloc Moteur (Trous/Fuite)</fullName>
            </value>
            <value>
                <fullName>Bloque (Serrage Moteur)</fullName>
            </value>
            <value>
                <fullName>Bouteilles d&#39;air</fullName>
            </value>
            <value>
                <fullName>BV bloquée</fullName>
            </value>
            <value>
                <fullName>Cabine / équipements</fullName>
            </value>
            <value>
                <fullName>Cabine / Multimédia</fullName>
            </value>
            <value>
                <fullName>Cadre</fullName>
            </value>
            <value>
                <fullName>Calage</fullName>
            </value>
            <value>
                <fullName>Calandre</fullName>
            </value>
            <value>
                <fullName>Capteur D&#39;usure</fullName>
            </value>
            <value>
                <fullName>Chargeur Hayon</fullName>
            </value>
            <value>
                <fullName>Choc caisse</fullName>
            </value>
            <value>
                <fullName>Choc Carrosserie Ou Pare-brise</fullName>
            </value>
            <value>
                <fullName>Choc Cellule Isotherme (Caisse)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>