unpackaged/main/default/objects/WorkOrder/fields/aucune_astreinte__c.field-meta.xml
<CustomField>
    <fullName>aucune_astreinte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>aucune astreinte</label>
    <type>Checkbox</type>
</CustomField>