unpackaged/main/default/objects/WorkOrder/fields/Avancement__c.field-meta.xml
<CustomField>
    <fullName>Avancement__c</fullName>
    <description>Ratio Missions fermées / total missions</description>
    <formula>if
(
 TECH_Nb_Missions_All__c != 0
,
 TECH_Nb_Missions_Fermees__c /TECH_Nb_Missions_All__c
,
0
)</formula>
    <label>Avancement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>