unpackaged/main/default/objects/WorkOrder/fields/Avancement_TDP_Parent__c.field-meta.xml
<CustomField>
    <fullName>Avancement_TDP_Parent__c</fullName>
    <label>Avancement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>