unpackaged/main/default/objects/WorkOrder/fields/Chauffeur__c.field-meta.xml
<CustomField>
    <fullName>Chauffeur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chauffeur</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contact - Chauffeur</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ordres de Travail</relationshipLabel>
    <relationshipName>Ordres_de_Travail</relationshipName>
    <type>Lookup</type>
</CustomField>