unpackaged/main/default/objects/WorkOrder/fields/Client_purchase_order_number__c.field-meta.xml
<CustomField>
    <fullName>Client_purchase_order_number__c</fullName>
    <label>Internal purchase order number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>