unpackaged/main/default/objects/WorkOrder/fields/Commentaire_client__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_client__c</fullName>
    <label>Commentaire client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>