unpackaged/main/default/objects/WorkOrder/fields/Commentaires_Coldline__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_Coldline__c</fullName>
    <label>Commentaires Coldline</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>