unpackaged/main/default/objects/WorkOrder/fields/Confirmation_client__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation client</label>
    <type>Checkbox</type>
</CustomField>