unpackaged/main/default/objects/WorkOrder/fields/Confirmation_client_txt__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_client_txt__c</fullName>
    <description>texte de confirmation client</description>
    <formula>$Label.OT_ConfirmationClient_TXT</formula>
    <label>Confirmation client</label>
    <type>Text</type>
</CustomField>