unpackaged/main/default/objects/WorkOrder/fields/Date_de_realisation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_realisation__c</fullName>
    <label>Date de réalisation</label>
    <type>DateTime</type>
</CustomField>