unpackaged/main/default/objects/WorkOrder/fields/Date_Heure_Appel_technicien__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_Appel_technicien__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Date / Heure Appel technicien</label>
    <type>DateTime</type>
</CustomField>