unpackaged/main/default/objects/WorkOrder/fields/Date_Heure_Depart__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_Depart__c</fullName>
    <label>Date/Heure Départ</label>
    <type>DateTime</type>
</CustomField>