unpackaged/main/default/objects/WorkOrder/fields/Date_Heure_Fin__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_Fin__c</fullName>
    <label>Date/Heure Fin</label>
    <type>DateTime</type>
</CustomField>