unpackaged/main/default/objects/WorkOrder/fields/Date_Heure_Retour__c.field-meta.xml
<CustomField>
    <fullName>Date_Heure_Retour__c</fullName>
    <label>Date / Heure Retour</label>
    <type>DateTime</type>
</CustomField>