unpackaged/main/default/objects/WorkOrder/fields/Debut_disponibilite_vehicule__c.field-meta.xml
<CustomField>
    <fullName>Debut_disponibilite_vehicule__c</fullName>
    <label>Début disponibilité véhicule</label>
    <type>DateTime</type>
</CustomField>