unpackaged/main/default/objects/WorkOrder/fields/Derniere_etape_realisee__c.field-meta.xml
<CustomField>
    <fullName>Derniere_etape_realisee__c</fullName>
    <description>Afficher la derniere étape réalisée (La derniere mission dont le statut est réalisée</description>
    <formula>IF 
( 
AND(TECH_Transmission__c ==1,TECH_Depart__c==0,TECH_Arrivee__c==0,TECH_Fin__c==0,TECH_Retour__c==0) 
, 
$Label.Mission_TECH_Transmission 
, 
IF 
( 
AND(TECH_Transmission__c ==1,TECH_Depart__c==1,TECH_Arrivee__c==0,TECH_Fin__c==0,TECH_Retour__c==0) 
, 
$Label.Mission_TECH_Depart 
, 
IF 
( 
AND(TECH_Transmission__c ==1,TECH_Depart__c==1,TECH_Arrivee__c==1,TECH_Fin__c==0,TECH_Retour__c==0) 
, 
$Label.Mission_TECH_Arrivee 
, 
IF 
( 
AND(TECH_Transmission__c ==1,TECH_Depart__c==1,TECH_Arrivee__c==1,TECH_Fin__c==1,TECH_Retour__c==0) 
, 
$Label.Mission_TECH_Fin 
, 
IF 
( 
AND(TECH_Transmission__c ==1,TECH_Depart__c==1,TECH_Arrivee__c==1,TECH_Fin__c==1,TECH_Retour__c==1) 
, 

$Label.Mission_TECH_Retour 
, 
$Label.Mission_TECH_Nouveau 
) 
) 
) 
) 



)</formula>
    <inlineHelpText>La dernière mission dont le statut est réalisée.</inlineHelpText>
    <label>Dernière étape réalisée</label>
    <type>Text</type>
</CustomField>