unpackaged/main/default/objects/WorkOrder/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Date d&#39;échéance</label>
    <type>DateTime</type>
</CustomField>