unpackaged/main/default/objects/WorkOrder/fields/Dur_e_sur_place__c.field-meta.xml
<CustomField>
    <fullName>Dur_e_sur_place__c</fullName>
    <formula>if 
( 
AND(NOT(ISBLANK( Date_Heure_Arrivee__c )),NOT(ISBLANK( Date_Heure_Fin__c )),Date_Heure_Arrivee__c &lt;Date_Heure_Fin__c) 
, 
(Date_Heure_Fin__c - Date_Heure_Arrivee__c )*24*60 
, 
NULL 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée sur place(Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>