unpackaged/main/default/objects/WorkOrder/fields/Duree_Arrivee__c.field-meta.xml
<CustomField>
    <fullName>Duree_Arrivee__c</fullName>
    <formula>if 
( 
AND(NOT(ISBLANK( Date_Heure_Arrivee__c )),NOT(ISBLANK( Date_Heure_Depart__c )),Date_Heure_Arrivee__c &gt;Date_Heure_Depart__c) 
, 
(Date_Heure_Arrivee__c - Date_Heure_Depart__c)*24*60 
, 
NULL 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée Arrivée(Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>