unpackaged/main/default/objects/WorkOrder/fields/Earliest_Start_Permitted__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Start_Permitted__c</fullName>
    <label>Date Planifiée</label>
    <type>DateTime</type>
</CustomField>