unpackaged/main/default/objects/WorkOrder/fields/EndIntervention__c.field-meta.xml
<CustomField>
    <fullName>EndIntervention__c</fullName>
    <label>EndIntervention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>