unpackaged/main/default/objects/WorkOrder/fields/Fin_disponibilite_vehicule__c.field-meta.xml
<CustomField>
    <fullName>Fin_disponibilite_vehicule__c</fullName>
    <label>Fin disponibilité véhicule</label>
    <type>DateTime</type>
</CustomField>