unpackaged/main/default/objects/WorkOrder/fields/Groupe_Frigo__c.field-meta.xml
<CustomField>
    <fullName>Groupe_Frigo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Groupe Frigo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.RecordTypeId</field>
            <operation>equals</operation>
            <value>Equipement</value>
        </filterItems>
        <infoMessage>Le parc doit être de type Equipement</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Ordres de Travail (Groupe Frigo)</relationshipLabel>
    <relationshipName>Ordres_de_Travail_Groupe_Frigo</relationshipName>
    <type>Lookup</type>
</CustomField>