unpackaged/main/default/objects/WorkOrder/fields/Heure_Debut_Intervention__c.field-meta.xml
<CustomField>
    <fullName>Heure_Debut_Intervention__c</fullName>
    <label>Heure de début d&#39;intervention</label>
    <type>DateTime</type>
</CustomField>