unpackaged/main/default/objects/WorkOrder/fields/heures_frigo_constatees__c.field-meta.xml
<CustomField>
    <fullName>heures_frigo_constatees__c</fullName>
    <label>heures frigo constatées</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>