unpackaged/main/default/objects/WorkOrder/fields/Idbc__c.field-meta.xml
<CustomField>
    <fullName>Idbc__c</fullName>
    <label>Idbc</label>
    <length>25</length>
    <type>Text</type>
</CustomField>