unpackaged/main/default/objects/WorkOrder/fields/Intervenant__c.field-meta.xml
<CustomField>
    <fullName>Intervenant__c</fullName>
    <label>Intervenant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interne</fullName>
            </value>
            <value>
                <fullName>Externe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>