unpackaged/main/default/objects/WorkOrder/fields/Intervenant_Externe_txt__c.field-meta.xml
<CustomField>
    <fullName>Intervenant_Externe_txt__c</fullName>
    <label>Intervenant Externe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>