unpackaged/main/default/objects/WorkOrder/fields/Intervenant_Interne__c.field-meta.xml
<CustomField>
    <fullName>Intervenant_Interne__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Intervenant interne</description>
    <label>Intervenant Interne</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ordres_de_Travail</relationshipName>
    <type>Lookup</type>
</CustomField>