unpackaged/main/default/objects/WorkOrder/fields/Intervention_nuit__c.field-meta.xml
<CustomField>
    <fullName>Intervention_nuit__c</fullName>
    <formula>Case.Intervention_Nuit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intervention nuit</label>
    <type>Checkbox</type>
</CustomField>