unpackaged/main/default/objects/WorkOrder/fields/Intf_Synchronisation_Message__c.field-meta.xml
<CustomField>
    <fullName>Intf_Synchronisation_Message__c</fullName>
    <label>Synchronisation Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>