unpackaged/main/default/objects/WorkOrder/fields/Km_Asset__c.field-meta.xml
<CustomField>
    <fullName>Km_Asset__c</fullName>
    <label>Km_Asset</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>