unpackaged/main/default/objects/WorkOrder/fields/Km_constat__c.field-meta.xml
<CustomField>
    <fullName>Km_constat__c</fullName>
    <label>Km constaté</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>