unpackaged/main/default/objects/WorkOrder/fields/Lien_rapport_de_service__c.field-meta.xml
<CustomField>
    <fullName>Lien_rapport_de_service__c</fullName>
    <description>Lien vers le rapport de service</description>
    <formula>if(
 ISBLANK(TECH_ID_Rapport_Service__c )
,
&#39;Rapport non disponible&#39;
,

HYPERLINK(&quot;/&quot; &amp; TECH_ID_Rapport_Service__c , &quot;Rapport de service&quot;)
)</formula>
    <label>Lien rapport de service</label>
    <type>Text</type>
</CustomField>