unpackaged/main/default/objects/WorkOrder/fields/Lieu_Intervention__c.field-meta.xml
<CustomField>
    <fullName>Lieu_Intervention__c</fullName>
    <label>Lieu d’intervention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atelier</fullName>
            </value>
            <value>
                <fullName>Site client</fullName>
            </value>
            <value>
                <fullName>Autre adresse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>