unpackaged/main/default/objects/WorkOrder/fields/Mission_realisee__c.field-meta.xml
<CustomField>
    <fullName>Mission_realisee__c</fullName>
    <formula>IF 
( 
AND(TECH_Transmission__c ==1,TECH_Depart__c==1,TECH_Arrivee__c==1,TECH_Fin__c==1,TECH_Retour__c==1) 
, 
&quot;Retour&quot;
, 
IF 
( 
AND(TECH_Transmission__c ==1,TECH_Depart__c==1,TECH_Arrivee__c==1,TECH_Fin__c==1,TECH_Retour__c==0) 
, 
&quot;Fin&quot;
, 
IF 
( 
AND(TECH_Transmission__c ==1,TECH_Depart__c==1,TECH_Arrivee__c==1,TECH_Fin__c==0,TECH_Retour__c==0) 
, 
&quot;Arrivée&quot;
, 
IF 
( 
AND(TECH_Transmission__c ==1,TECH_Depart__c==1,TECH_Arrivee__c==0,TECH_Fin__c==0,TECH_Retour__c==0) 
, 
&quot;Départ&quot;
, 
IF 
( 
AND(TECH_Transmission__c ==1,TECH_Depart__c==0,TECH_Arrivee__c==0,TECH_Fin__c==0,TECH_Retour__c==0) 
, 
&quot;Transmission&quot;
, 
&quot;Nouveau&quot;
) 
) 
) 
) 
)</formula>
    <label>Mission réalisée</label>
    <type>Text</type>
</CustomField>