unpackaged/main/default/objects/WorkOrder/fields/N_Parc__c.field-meta.xml
<CustomField>
    <fullName>N_Parc__c</fullName>
    <formula>Asset.Name</formula>
    <label>N°Parc</label>
    <type>Text</type>
</CustomField>