unpackaged/main/default/objects/WorkOrder/fields/Nom_commercial__c.field-meta.xml
<CustomField>
    <fullName>Nom_commercial__c</fullName>
    <formula>Account.NomCommercial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom commercial</label>
    <type>Text</type>
</CustomField>