unpackaged/main/default/objects/WorkOrder/fields/Nom_du_technicien__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_technicien__c</fullName>
    <label>Nom du technicien</label>
    <length>255</length>
    <type>Text</type>
</CustomField>