unpackaged/main/default/objects/WorkOrder/fields/Nom_du_technicien_joker__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_technicien_joker__c</fullName>
    <label>Nom du technicien joker</label>
    <type>TextArea</type>
</CustomField>