unpackaged/main/default/objects/WorkOrder/fields/Nom_du_technicien_permanence__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_technicien_permanence__c</fullName>
    <label>Nom du technicien permanence</label>
    <type>TextArea</type>
</CustomField>