unpackaged/main/default/objects/WorkOrder/fields/Numero_mobile_joker__c.field-meta.xml
<CustomField>
    <fullName>Numero_mobile_joker__c</fullName>
    <label>Numéro mobile joker</label>
    <type>Phone</type>
</CustomField>