unpackaged/main/default/objects/WorkOrder/fields/Numero_mobile_permanence__c.field-meta.xml
<CustomField>
    <fullName>Numero_mobile_permanence__c</fullName>
    <label>Numéro mobile permanence</label>
    <type>Phone</type>
</CustomField>