unpackaged/main/default/objects/WorkOrder/fields/Organe_controler__c.field-meta.xml
<CustomField>
    <fullName>Organe_controler__c</fullName>
    <label>Organe à contrôler</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cabine</fullName>
            </value>
            <value>
                <fullName>Caisse</fullName>
            </value>
            <value>
                <fullName>Châssis</fullName>
            </value>
            <value>
                <fullName>Electricité</fullName>
            </value>
            <value>
                <fullName>Hayon</fullName>
            </value>
            <value>
                <fullName>Groupe</fullName>
                <label>Groupe frigorifique</label>
            </value>
            <value>
                <fullName>Pneumatiques</fullName>
                <label>Pneumatique</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>