unpackaged/main/default/objects/WorkOrder/fields/Organe_flow__c.field-meta.xml
<CustomField>
    <fullName>Organe_flow__c</fullName>
    <label>Organe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cabine</fullName>
            </value>
            <value>
                <fullName>Caisse</fullName>
            </value>
            <value>
                <fullName>Châssis</fullName>
            </value>
            <value>
                <fullName>Electricité</fullName>
            </value>
            <value>
                <fullName>Hayon</fullName>
            </value>
            <value>
                <fullName>Groupe</fullName>
            </value>
            <value>
                <fullName>Pneumatique</fullName>
                <label>Pneumatiques</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>