unpackaged/main/default/objects/WorkOrder/fields/Organe_flux__c.field-meta.xml
<CustomField>
    <fullName>Organe_flux__c</fullName>
    <description>picklist utilisé dans le flux demande service community</description>
    <label>Organe_flux</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cabine</fullName>
            </value>
            <value>
                <fullName>Caisse</fullName>
            </value>
            <value>
                <fullName>Châssis</fullName>
            </value>
            <value>
                <fullName>Electricité</fullName>
            </value>
            <value>
                <fullName>Hayon</fullName>
            </value>
            <value>
                <fullName>Groupe</fullName>
            </value>
            <value>
                <fullName>Pneumatiques</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>