unpackaged/main/default/objects/WorkOrder/fields/Origine_de_la_requete__c.field-meta.xml
<CustomField>
    <fullName>Origine_de_la_requete__c</fullName>
    <formula>text( Case.Origin )</formula>
    <label>Origine de la requête</label>
    <type>Text</type>
</CustomField>