unpackaged/main/default/objects/WorkOrder/fields/Origine_Wo__c.field-meta.xml
<CustomField>
    <fullName>Origine_Wo__c</fullName>
    <label>Origine_Wo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>télématique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>