unpackaged/main/default/objects/WorkOrder/fields/Parc_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Parc_Assistance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parc Assistance</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.RecordTypeId</field>
            <operation>equals</operation>
            <value>Parc</value>
        </filterItems>
        <infoMessage>Vous ne pouvez sélectionner que les parcs en position &quot;En service&quot;</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Ordres de Travail (Parc Assistance)</relationshipLabel>
    <relationshipName>Ordres_de_Travail_Assistance</relationshipName>
    <type>Lookup</type>
</CustomField>