unpackaged/main/default/objects/WorkOrder/fields/Parc_Relais__c.field-meta.xml
<CustomField>
    <fullName>Parc_Relais__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parc Relais</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.RecordTypeId</field>
            <operation>equals</operation>
            <value>Parc, Parc - Container</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Ordres de Travail (Relais)</relationshipLabel>
    <relationshipName>Ordres_de_Travail_Relais</relationshipName>
    <type>Lookup</type>
</CustomField>