unpackaged/main/default/objects/WorkOrder/fields/Parc_relais_x__c.field-meta.xml
<CustomField>
    <fullName>Parc_relais_x__c</fullName>
    <label>Parc_relais_x</label>
    <length>10</length>
    <type>Text</type>
</CustomField>