unpackaged/main/default/objects/WorkOrder/fields/Precisions__c.field-meta.xml
<CustomField>
    <fullName>Precisions__c</fullName>
    <label>Précisions</label>
    <type>TextArea</type>
</CustomField>