unpackaged/main/default/objects/WorkOrder/fields/Precisions_Long__c.field-meta.xml
<CustomField>
    <fullName>Precisions_Long__c</fullName>
    <label>Travaux Réalisés</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>