unpackaged/main/default/objects/WorkOrder/fields/Presence_Vehicule__c.field-meta.xml
<CustomField>
    <fullName>Presence_Vehicule__c</fullName>
    <label>Présence Véhicule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>