unpackaged/main/default/objects/WorkOrder/fields/Priorite_Icone__c.field-meta.xml
<CustomField>
    <fullName>Priorite_Icone__c</fullName>
    <formula>if
(ISPICKVAL( Priority , &#39;Faible&#39;), IMAGE(&quot;/resource/1623751189000/Icon_Flag_Green?&quot;, &quot;&quot;,32, 32),
if
(ISPICKVAL( Priority , &#39;Moyen&#39;), IMAGE(&quot;/resource/1623751255000/Icon_Flag_Yellow?&quot;, &quot;&quot;,32, 32),
if
(ISPICKVAL( Priority , &#39;Élevée&#39;), IMAGE(&quot;/resource/1623751238000/Icon_Flag_Red?&quot;, &quot;&quot;,32, 32), IMAGE(&quot;/resource/1623751165000/Icon_Flag_Black&quot;, &quot;&quot;,32, 32)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priorité</label>
    <type>Text</type>
</CustomField>