unpackaged/main/default/objects/WorkOrder/fields/Purchase_order_Icon__c.field-meta.xml
<CustomField>
    <fullName>Purchase_order_Icon__c</fullName>
    <formula>if
(
NOT(ISBLANK(Purchase_order_link__c )) 
,
IMAGE(&quot;/resource/1598827384000/picto_done&quot;, &quot;&quot;, 40, 150)
,

 IMAGE(&quot;/resource/1598827384000/picto_done&quot;, &quot;&quot;, 40, 150)
)</formula>
    <label>Purchase order</label>
    <type>Text</type>
</CustomField>