unpackaged/main/default/objects/WorkOrder/fields/Purchase_order_link__c.field-meta.xml
<CustomField>
    <fullName>Purchase_order_link__c</fullName>
    <label>Purchase order link</label>
    <type>Url</type>
</CustomField>