unpackaged/main/default/objects/WorkOrder/fields/Purchase_order_Status__c.field-meta.xml
<CustomField>
    <fullName>Purchase_order_Status__c</fullName>
    <label>Purchase order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>