unpackaged/main/default/objects/WorkOrder/fields/Qualification__c.field-meta.xml
<CustomField>
    <fullName>Qualification__c</fullName>
    <label>Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branchement</fullName>
            </value>
            <value>
                <fullName>Carrosserie/Caisse/Cellule isotherme</fullName>
            </value>
            <value>
                <fullName>Châssis</fullName>
            </value>
            <value>
                <fullName>Groupe Frigo</fullName>
            </value>
            <value>
                <fullName>Hayon</fullName>
            </value>
            <value>
                <fullName>Hayon/système de levage</fullName>
            </value>
            <value>
                <fullName>Moteur</fullName>
            </value>
            <value>
                <fullName>Pneumatique</fullName>
            </value>
            <value>
                <fullName>Utilisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>