unpackaged/main/default/objects/WorkOrder/fields/Raison_de_fermeture__c.field-meta.xml
<CustomField>
    <fullName>Raison_de_fermeture__c</fullName>
    <label>Raison de fermeture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Raison_de_fermeture</valueSetName>
    </valueSet>
</CustomField>