unpackaged/main/default/objects/WorkOrder/fields/Record_Type_Miroir__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Miroir__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Miroir</label>
    <type>Text</type>
</CustomField>