unpackaged/main/default/objects/WorkOrder/fields/Recordtype__c.field-meta.xml
<CustomField>
    <fullName>Recordtype__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Recordtype</label>
    <type>Text</type>
</CustomField>